--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #F1E9DA;
+  background-color: #595959;
+  /* background-color: #F1E9DA; */
 }
 
 
